feat: bookly details and filtering page FE
